lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:33: error: ';' expected but integer literal found.
  	if(position()) == 1) { 
                          ^