lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.code
  override def initialize() {
  def getLandingZone():Segment = {
var sol=getSol()
var l=sol.length
var test1 = sol(0)
var test2 = sol(1)
var dabs : Double = 0
var fabs : Double= 0
var ord : Double = 0
var i = 0
	for (k<- 0 to l-2){ 
	test1 = sol(k)
	test2 = sol(k+1)
	if (test1.y == test2.y){
	return Segment(test1,test2)
	}}
return Segment(Point(0,0),Point(1999,0))
  }
var zone = getLandingZone()
  }

def position():Int =
	if (getX() <= zone(0).x) {return 0}
	else
		if (getX()>=zone(1).x) {return 2}
  
  override def step() {
  	
  	if (position() == 0) {
  		setAngleDesire(-20)
  		setPousseeDesiree(4) 
  	}
  	if(position()) == 1) { 
  		var vy = getVitesseY()
if (vy<=(-9)) {

setPousseeDesiree(4)
}
else setPousseeDesiree(0)
  	}
  	if (position() == 2) {
  		setAngleDesire(-20)
  		setPousseeDesire(4)
  	}

  }
